<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="32dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        style="@style/AppText.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/welcome_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/AppText.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_in_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <TextView
        android:id="@+id/textView3"
        style="@style/AppText.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/label_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        style="@style/AppEditText.Underline"
        android:layout_width="match_parent"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/textView3" />

    <TextView
        android:id="@+id/textView4"
        style="@style/AppText.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/label_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/editTextTextPassword"
        style="@style/AppEditText.Underline"
        android:layout_width="match_parent"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/textView4" />

    <Button
        android:id="@+id/button3"
        style="@style/AppButton.Primary"
        android:layout_width="match_parent"
        android:layout_marginTop="48dp"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@id/editTextTextPassword" />

    <TextView
        android:id="@+id/textViewRegisterLink"
        style="@style/AppText.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/link_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button3" />

</androidx.constraintlayout.widget.ConstraintLayout>
